tools/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cuppa
  annotations:
    kubernetes.io/ingress.class: "traefik"

spec:
  rules:
    - host: auth.fallensoulmonk.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cuppa-auth
                port:
                  number: 3030

    - host: finance.fallensoulmonk.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finance-stats
                port:
                  number: 3031

    - host: app.fallensoulmonk.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cuppa-web
                port:
                  number: 3500
